--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,10 @@
         <h1>Hello, World!</h1>
         <h2>The date and time on the server is: {{ time }}</h2>
         <h3>This web server is being run off of Max's Raspberry Pi</h3>
-        <h4>The image below is of the SpaceX Crew Dragon Capsule 'Endeavour'<h4>
-        <h5>For Business inquiries please email us: downloadfreevirus@privateinfosellers.net<h5>
-        <img src="https://www.teslarati.com/wp-content/uploads/2020/07/SpaceX-Crew-Dragon-C206-Demo-2-ISS-spacewalk-070120-NASA-2-crop-2-c-scaled.jpg" alt="Crew Dragon Capsule" width="640" height="629.5">
+        <h4>The image below is of the garden that Max was to take of during the summer.</h4>
+        <h5>For Business inquiries please email us: downloadfreevirus@privateinfosellers.net</h5>
+        <img src= "{{url_for('static', filename='garden.jpg')}}" alt="Garden view" width="640" height="629.5">
+	<br>
     <body>
 </html>
 #max190sl.github.io
