Important update to the index.html file

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
         <h1>Hello, World!</h1>
         <h2>The date and time on the server is: {{ time }}</h2>
 	<h2>The current indoor temperature is: {{temperature}}˚C (the temperature sensor is just above a radiator).</h2>
-        <h3>This web server is being run off of Max's Raspberry Pi</h3>
-        <h4>The image below is of the garden that Max was to take of during the summer.</h4>
+        <h3>This web server is being run off of Aiko's Raspberry Pi</h3>
+        <h4>The image below is of the garden that Max was to take care of during the summer.</h4>
         <h5>For Business inquiries please email us: downloadfreevirus@privateinfosellers.net</h5>
         <img src= "{{url_for('static', filename='garden.jpg')}}" alt="Garden view" width="640" height="629.5">
 	<br>
